Modify README and index.html, create "Recipes/" and add FrenchOmelette to that file
README was modified for better understading and
index.html was modified to add link for
FrenchOmelette, directory Recipes/ was created to
hold every recipe of the web

--- a/index.html
+++ b/index.html
@@ -2,10 +2,11 @@
 <html>
     <head>
         <meta charset="UTF-8">
-        <title>Odin-Recipes</title>
+        <title>List</title>
     </head>
 
     <body>
-        <h1>Odin Recipes</h1>
+        <h1>Food-Recipes list</h1>
+        <a href="/recipes/FrenchOmelette.html" rel="noreferrer">FrenchOmelette</a>
     </body>
 </html>
