Create images directory with frechomelette image, modify index.html
images/ will help to hold every image of the
recipes, also completed the FrenchOmelette page
with everything required, modified index.html to
put every link in a list so it looks better
organized

--- a/index.html
+++ b/index.html
@@ -7,6 +7,10 @@
 
     <body>
         <h1>Food-Recipes list</h1>
-        <a href="/recipes/FrenchOmelette.html" rel="noreferrer">FrenchOmelette</a>
+        <ul>
+            <li><a href="/recipes/FrenchOmelette.html" rel="noreferrer">FrenchOmelette</a></li>
+            <li></li>
+            <li></li>
+        </ul>
     </body>
 </html>
