--- a/recipes/FrenchOmelette.html
+++ b/recipes/FrenchOmelette.html
@@ -8,5 +8,25 @@
     <body>
         <a href="/index.html" rel="noreferrer">Back to the list</a>
         <h1>The French Omelette</h1>
+        <img src="/images/french-omelette.png" height="700">
+        <h2>Description</h2>
+        <p>The French Omelette is one of the most delicious ways to cook eggs, it's soft in the outside and creamy in the inside.
+           It's like the combination of an omelette and scrambled eggs.
+        </p>
+        <h2>Ingredients</h2>
+        <ul>
+            <li>Three eggs</li>
+            <li>Butter</li>
+            <li>Salt</li>
+        </ul>
+        <h2>Preparation list</h2>
+        <ol>
+            <li>Crack three eggs into a bowl</li>
+            <li>Beat the eggs until they create bubbles and are fully mixed</li>
+            <li>Prepare a pan at medium-low heat and add a cube of butter to it</li>
+            <li>Add the eggs to the pan and start stiring violently so the eggs start to jell like scrambled eggs</li>
+            <li>When the surface of the omelette is wet but not raw, add salt and/or pepper and start flipping it like a roller, the idea is to create a tube</li>
+            <li>Plate it adding a little bit of butter to its surface so it generates glow, add parsley and you're ready to go!</li>
+        </ol>
     </body>
 </html>
