--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
         <h1>Food-Recipes list</h1>
         <ul>
             <li><a href="/recipes/FrenchOmelette.html" rel="noreferrer">FrenchOmelette</a></li>
-            <li></li>
+            <li><a href="/recipes/BeefBirriaTacos.html" rel="noreferrer">Beef Birria Tacos</a></li>
             <li></li>
         </ul>
     </body>
