Add GrillPizza image and .html file, modify index.html to refer new recipe
new Pizza on the Grill recipe been added, added
image and .html file, .html file still has to be
completed

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
         <ul>
             <li><a href="/recipes/FrenchOmelette.html" rel="noreferrer">FrenchOmelette</a></li>
             <li><a href="/recipes/BeefBirriaTacos.html" rel="noreferrer">Beef Birria Tacos</a></li>
-            <li></li>
+            <li><a href="/recipes/GrillPizza.html" rel="noreferrer">Pizza on the Grill</a></li>
         </ul>
     </body>
 </html>
