--- a/recipes/GrillPizza.html
+++ b/recipes/GrillPizza.html
@@ -9,5 +9,53 @@
         <a href="/index.html" rel="noreferrer">Back to the list</a>
         <h1>Pizza on the Grill</h1>
         <img src="/images/GrillPizza.jpg">
+        <h2>Description</h2>
+        <p>
+            Pizza on the grill is a fantastic way to make pizza at home! The heat of a hot grill is a perfect match for a professional pizza oven. 
+            This grilled pizza recipe makes the dough from scratch and flavors it with garlic and basil. Use your favorite variety of toppings and shredded cheese, 
+            but it's best not to overload the pizza.
+        </p>
+        <h2>Ingredients</h2>
+        <h4>Pizza dough</h4>
+        <ul>
+            <li>1 cup warm water</li>
+            <li>1 package active dry yeast</li>
+            <li>3 cups all-purpose flour</li>
+            <li>1 tablespoon olive oil</li>
+            <li>2 teaspoons kosher salt</li>
+            <li>2 cloves garlic, minced</li>
+            <li>1 tablespoon chopped fresh basil</li>
+        </ul>
+        <h4>Garlic Oil</h4>
+        <ul>
+            <li>½ cup olive oil</li>
+            <li>1 teaspoon minced garlic</li>
+        </ul>
+        <h4>Pizza Toppings</h4>
+        <ul>
+            <li>¼ cup tomato sauce, divided</li>
+            <li>1 cup chopped tomatoes, divided</li>
+            <li>¼ cup sliced black olives, divided</li>
+            <li>¼ cup roasted red peppers, drained and chopped, divided</li>
+            <li>2 cups shredded mozzarella cheese, divided</li>
+            <li>4 tablespoons chopped fresh basil, divided</li>
+        </ul>
+        <h2>Preparation</h2>
+        <ol>
+            <li>Gather all ingredients</li>
+            <li>Make dough: Pour warm water into a large bowl; dissolve yeast and sugar in warm water. Let stand until yeast softens and begins to form a creamy foam, about 5 to 10 minutes</li>
+            <li>Mix in flour, 1 tablespoon olive oil, and salt until dough pulls away from the sides of the bowl</li>
+            <li>Turn onto a lightly floured surface. Knead until smooth, about 8 minutes</li>
+            <li>Place dough in a well-oiled bowl and cover with a damp cloth</li>
+            <li>Set aside to rise until doubled, about 1 hour. Punch down; knead in garlic and basil. Set aside to rise for 1 more hour, or until doubled again</li>
+            <li>Meanwhile, make garlic oil: Combine 1/2 cup olive oil with minced garlic in a microwave-safe cup or bowl. Heat for 30 seconds in the microwave</li>
+            <li>Preheat an outdoor grill for high heat; brush the grate with garlic oil</li>
+            <li>Make pizzas: Punch down dough and divide in half. Form each half into an oblong shape 3/8 to 1/2 inch thick</li>
+            <li>Carefully place one piece of dough on the hot grill. Dough will begin to puff almost immediately. When the bottom crust has lightly browned, turn dough over using two spatulas</li>
+            <li>Working quickly, brush garlic oil over crust</li>
+            <li>Top with 1/2 of each of the following: tomato sauce, chopped tomatoes, olives, red peppers, cheese, and basil</li>
+            <li>Close the lid and cook until cheese melts. Remove from grill and set aside to cool for a few minutes. Repeat with second piece of dough</li>
+            <li>Serve hot and enjoy!</li>
+        </ol>
     </body>
 </html>
