--- a/recipes/BeefBirriaTacos.html
+++ b/recipes/BeefBirriaTacos.html
@@ -6,13 +6,13 @@
     </head>
 
     <body>
-        <a href="/index.html" rel="noreferrer">Back to the list</a>
+        <a href="../index.html" rel="noreferrer">Back to the list</a>
         <h1>Beef Birria Tacos</h1>
-        <img src="/images/BeefBirriaTacos.webp" rel="noreferrer">
+        <img src="../images/BeefBirriaTacos.webp" rel="noreferrer">
         <h2>Description</h2>
         <p>
-            Mexican birria tacos, Jalisco-style, made with braised beef that's slow-cooked in a fragrant 3-chile sauce with a delicious spice mix. 
-            Crispy tacos, and tender, mouth-watering beef team up with melted Mexican cheese in this impressive meal. This recipe takes a little 
+            Mexican birria tacos, Jalisco-style, made with braised beef that's slow-cooked in a fragrant 3-chile sauce with a delicious spice mix.
+            Crispy tacos, and tender, mouth-watering beef team up with melted Mexican cheese in this impressive meal. This recipe takes a little
             time but it's so <b>worth it</b>!
         </p>
         <h2>Ingredients</h2>
