--- a/recipes/FrenchOmelette.html
+++ b/recipes/FrenchOmelette.html
@@ -6,9 +6,9 @@
     </head>
 
     <body>
-        <a href="/index.html" rel="noreferrer">Back to the list</a>
+        <a href="../index.html" rel="noreferrer">Back to the list</a>
         <h1>The French Omelette</h1>
-        <img src="/images/french-omelette.png" height="700">
+        <img src="../images/french-omelette.png" height="700">
         <h2>Description</h2>
         <p>The French Omelette is one of the most delicious ways to cook eggs, it's soft in the outside and creamy in the inside.
            It's like the combination of an omelette and scrambled eggs.
