--- a/recipes/GrillPizza.html
+++ b/recipes/GrillPizza.html
@@ -6,13 +6,13 @@
     </head>
 
     <body>
-        <a href="/index.html" rel="noreferrer">Back to the list</a>
+        <a href="../index.html" rel="noreferrer">Back to the list</a>
         <h1>Pizza on the Grill</h1>
-        <img src="/images/GrillPizza.jpg">
+        <img src="../images/GrillPizza.jpg">
         <h2>Description</h2>
         <p>
-            Pizza on the grill is a fantastic way to make pizza at home! The heat of a hot grill is a perfect match for a professional pizza oven. 
-            This grilled pizza recipe makes the dough from scratch and flavors it with garlic and basil. Use your favorite variety of toppings and shredded cheese, 
+            Pizza on the grill is a fantastic way to make pizza at home! The heat of a hot grill is a perfect match for a professional pizza oven.
+            This grilled pizza recipe makes the dough from scratch and flavors it with garlic and basil. Use your favorite variety of toppings and shredded cheese,
             but it's best not to overload the pizza.
         </p>
         <h2>Ingredients</h2>
