--- a/index.html
+++ b/index.html
@@ -8,9 +8,9 @@
     <body>
         <h1>Food-Recipes list</h1>
         <ul>
-            <li><a href="./recipes/FrenchOmelette.html" rel="noreferrer">FrenchOmelette</a></li>
-            <li><a href="./recipes/BeefBirriaTacos.html" rel="noreferrer">Beef Birria Tacos</a></li>
-            <li><a href="./recipes/GrillPizza.html" rel="noreferrer">Pizza on the Grill</a></li>
+            <li><a href="recipes/FrenchOmelette.html" rel="noreferrer">FrenchOmelette</a></li>
+            <li><a href="recipes/BeefBirriaTacos.html" rel="noreferrer">Beef Birria Tacos</a></li>
+            <li><a href="recipes/GrillPizza.html" rel="noreferrer">Pizza on the Grill</a></li>
         </ul>
     </body>
 </html>
